--- a/lista.html
+++ b/lista.html
@@ -10,7 +10,7 @@
     <h1>Lista</h1>
     <ul>
       <li>campeao1</li>
-      <li>campeao2</li>
+      <li>campeao2.</li>
     </ul>
   </body>
 </html>
